core. api-server. added API to get only task context
