# core/api-server/docs/swagger.yaml
@@ -5,7 +5,7 @@ definitions:
       action:
         type: string
       data:
-        type: string
+        type: object
       id:
         type: string
       queue:
@@ -232,6 +232,51 @@ paths:
       summary: Create and queue a cluster task
       tags:
       - /tasks cluster
+  /tasks/cluster/{task_id}/context:
+    get:
+      description: get task statuses (context)
+      parameters:
+      - description: Task ID
+        in: path
+        name: task_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            Authorization:
+              description: Bearer <valid.JWT.token>
+              type: string
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.StatusOK'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: string
+                message:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.StatusBadRequest'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: object
+                message:
+                  type: string
+              type: object
+      summary: Get the context of a cluster task
+      tags:
+      - /tasks cluster
   /tasks/cluster/{task_id}/status:
     get:
       description: get task statuses (output, error, exit_code)
@@ -366,6 +411,56 @@ paths:
                   type: string
               type: object
       summary: Create and queue a module task
+      tags:
+      - /tasks module
+  /tasks/module/{module_id}/{task_id}/context:
+    get:
+      description: get task statuses (context)
+      parameters:
+      - description: Module ID
+        in: path
+        name: module_id
+        required: true
+        type: string
+      - description: Task ID
+        in: path
+        name: task_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            Authorization:
+              description: Bearer <valid.JWT.token>
+              type: string
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.StatusOK'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: string
+                message:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.StatusBadRequest'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: object
+                message:
+                  type: string
+              type: object
+      summary: Get the context of a module task
       tags:
       - /tasks module
   /tasks/module/{module_id}/{task_id}/status:
@@ -507,6 +602,56 @@ paths:
                   type: string
               type: object
       summary: Create and queue a node task
+      tags:
+      - /tasks node
+  /tasks/node/{node_id}/{task_id}/context:
+    get:
+      description: get task statuses (context)
+      parameters:
+      - description: Node ID
+        in: path
+        name: node_id
+        required: true
+        type: string
+      - description: Task ID
+        in: path
+        name: task_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            Authorization:
+              description: Bearer <valid.JWT.token>
+              type: string
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.StatusOK'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: string
+                message:
+                  type: string
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.StatusBadRequest'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: object
+                message:
+                  type: string
+              type: object
+      summary: Get the context of a node task
       tags:
       - /tasks node
   /tasks/node/{node_id}/{task_id}/status:
